# pilyuli_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  telegram_pill_bot_TZ.md
.github/workflows/: ci-cd.yml
app/: bot.py  config.py  db.py  keyboards.py  scheduler.py
app/handlers/: add_medicine.py  callbacks.py  settings.py  start.py  today.py
app/services/: dose_service.py  medicine_service.py  message_service.py  settings_service.py
tests/: test_dose_service.py  test_medicine_service.py
